[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/eei/EEIStat.gd" type="Script" id=1]
[ext_resource path="res://fonts/tomorrow/Tomorrow-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/vt323/VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="EEIStat" type="HBoxContainer"]
margin_right = 326.0
margin_bottom = 14.0
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="EEIStatTitle" type="Label" parent="."]
margin_top = 6.0
margin_right = 252.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Rabbits Alive"

[node name="PlusSign" type="Label" parent="."]
margin_left = 257.0
margin_right = 271.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.137255, 0.803922, 0.164706, 1 )
text = "+"

[node name="MinusSign" type="Label" parent="."]
visible = false
margin_left = 259.0
margin_right = 273.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.137255, 0.137255, 1 )
text = "-"

[node name="EEIStatContent" type="Label" parent="."]
margin_left = 276.0
margin_top = 6.0
margin_right = 326.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
text = "10000"
